k8s/apps/adifinki/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: adifinki
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
